--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -3,21 +3,24 @@
 @{
     ViewData["Title"] = "Товары";
 }
-
-<h2>Index</h2>
+<p/>
+<h2>Товары</h2>
 
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                Name
+                Наименование
             </th>
             <th>
-                Category
+                Тип
             </th>
             <th>
-                Description
+                Описание
+            </th>
+            <th>
+                Цена
             </th>
         </tr>
     </thead>
@@ -33,6 +36,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
                 </td>
             </tr>
         }
